--- a/sass/layout/_sidebar-content.scss
+++ b/sass/layout/_sidebar-content.scss
@@ -1,9 +1,10 @@
 .site {
 	display: grid;
-	grid-template-columns: ($size__site-sidebar) auto;
+	grid-template-columns:  auto;
 	grid-template-areas:
 		"header header"
-		"sidebar main"
+		"sidebar sidebar"
+		"main main"
 		"footer footer";
 }
 .site__header, .site__sidebar, .site__main, .site__footer{
