s8-c14 modification menu lateral

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -67,6 +67,14 @@ Text Domain: 31w
 @import "base/base";
 
 /*--------------------------------------------------------------
+# Composante 
+--------------------------------------------------------------*/
+@import "composante/nav_sidebar";//navigation sidebar
+
+/*--------------------------------------------------------------
 # Layout
 --------------------------------------------------------------*/
 @import "layout/sidebar-content";
+
+
+
