--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: 31w_Auri-TP1 
-Author: Auristel Echeverria
+Author: Auristela Echeverria
 Author URI: http://github.com/AuriEcheand/31W
 Description: Thème de base pour le cours de 31w
 Version: 1.0.0
@@ -14,7 +14,7 @@ Text Domain: 31w
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
-# Variable
+# variable
 	- couleur
 	- police
 	- dimension
@@ -27,16 +27,15 @@ Text Domain: 31w
 	- Elements
 	- Links
 	- Forms
-## Layouts
-
-# Composant
+## Layout
+# Composent
 	- Navigation
 	- Posts and pages
 	- Widgets
 	- Media
 	- Galleries
 # plugins
-
+	- 
 # Utilities
 	- Accessibility
 	- Alignments
@@ -56,7 +55,7 @@ Text Domain: 31w
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
- html {
+html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
 }
@@ -220,9 +219,9 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
@@ -230,9 +229,9 @@ button,
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -241,9 +240,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -287,8 +286,8 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type="checkbox"],
-[type="radio"] {
+[type=checkbox],
+[type=radio] {
   box-sizing: border-box;
   padding: 0;
 }
@@ -296,8 +295,8 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -305,7 +304,7 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type="search"] {
+[type=search] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
@@ -313,7 +312,7 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type="search"]::-webkit-search-decoration {
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -382,21 +381,22 @@ body {
 }
 
 /**
-*   styles pour h1, h2, h3, h4, h5 h6 et p
+* style pour h1, h2, h3, h4, h5, h6 et p
 */
 h1, h2 {
   color: #666666;
   font-family: "Montserrat", sans-serif;
 }
 
-h2, h3, h4, h5, h6, p {
+h3, h4, h5, h6, p {
   color: #1a1a1a;
-  font-family: "Roboto", BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 h1 {
   font-size: clamp(2rem, 5vw, 5rem);
 }
+
 h2 {
   font-size: clamp(1.5rem, 3vw, 3rem);
 }
@@ -414,13 +414,12 @@ h5 {
 }
 
 h6 {
-  font-size: clamp(1rem, 1.5vw, 1.5rem);
+  font-size: clamp(1rem, 1vw, 1.5rem);
 }
 
 p {
   font-size: clamp(0.8rem, 1.5vw, 1rem);
 }
-
 
 hr {
   background-color: #ccc;
@@ -482,19 +481,15 @@ table {
 a {
   color: #4169e1;
 }
-
 a:visited {
   color: #800080;
 }
-
 a:hover, a:focus, a:active {
   color: #191970;
 }
-
 a:focus {
   outline: thin dotted;
 }
-
 a:hover, a:active {
   outline: 0;
 }
@@ -502,9 +497,9 @@ a:hover, a:active {
 /* Forms
 --------------------------------------------- */
 button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+input[type=button],
+input[type=reset],
+input[type=submit] {
   border: 1px solid;
   border-color: #ccc #ccc #bbb;
   border-radius: 3px;
@@ -513,61 +508,58 @@ input[type="submit"] {
   line-height: 1;
   padding: 0.6em 1em 0.4em;
 }
-
 button:hover,
-input[type="button"]:hover,
-input[type="reset"]:hover,
-input[type="submit"]:hover {
+input[type=button]:hover,
+input[type=reset]:hover,
+input[type=submit]:hover {
   border-color: #ccc #bbb #aaa;
 }
-
 button:active, button:focus,
-input[type="button"]:active,
-input[type="button"]:focus,
-input[type="reset"]:active,
-input[type="reset"]:focus,
-input[type="submit"]:active,
-input[type="submit"]:focus {
+input[type=button]:active,
+input[type=button]:focus,
+input[type=reset]:active,
+input[type=reset]:focus,
+input[type=submit]:active,
+input[type=submit]:focus {
   border-color: #aaa #bbb #bbb;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="url"],
-input[type="password"],
-input[type="search"],
-input[type="number"],
-input[type="tel"],
-input[type="range"],
-input[type="date"],
-input[type="month"],
-input[type="week"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="color"],
+input[type=text],
+input[type=email],
+input[type=url],
+input[type=password],
+input[type=search],
+input[type=number],
+input[type=tel],
+input[type=range],
+input[type=date],
+input[type=month],
+input[type=week],
+input[type=time],
+input[type=datetime],
+input[type=datetime-local],
+input[type=color],
 textarea {
   color: #666;
   border: 1px solid #ccc;
   border-radius: 3px;
   padding: 3px;
 }
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="password"]:focus,
-input[type="search"]:focus,
-input[type="number"]:focus,
-input[type="tel"]:focus,
-input[type="range"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="week"]:focus,
-input[type="time"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="color"]:focus,
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=url]:focus,
+input[type=password]:focus,
+input[type=search]:focus,
+input[type=number]:focus,
+input[type=tel]:focus,
+input[type=range]:focus,
+input[type=date]:focus,
+input[type=month]:focus,
+input[type=week]:focus,
+input[type=time]:focus,
+input[type=datetime]:focus,
+input[type=datetime-local]:focus,
+input[type=color]:focus,
 textarea:focus {
   color: #111;
 }
@@ -579,13 +571,10 @@ select {
 textarea {
   width: 100%;
 }
+
 /*--------------------------------------------------------------
 # Layout
 --------------------------------------------------------------*/
-/*
-Guide efficace sur l'utilisation de grid
-https://css-tricks.com/snippets/css/complete-guide-grid/
-*/
 .site {
   display: grid;
   grid-template-columns: auto;
@@ -598,33 +587,30 @@ https://css-tricks.com/snippets/css/complete-guide-grid/
 
 .site__header {
   grid-area: header;
-  background-color: #7bcbdf;
+  background-color: #3d80bd;
 }
 
 .site__main {
   grid-area: main;
   overflow: hidden;
   /* Resolves issue with <pre> elements forcing full width. */
-  background-color: #a4dbe9;
+  background-color: #6199cc;
 }
 
 .site__sidebar {
   grid-area: sidebar;
-  background-color: #cdebf3;
+  background-color: #87b2d9;
 }
 
 .site__footer {
   grid-area: footer;
-  background-color: #7bcbdf;
+  background-color: #3d80bd;
 }
 
 @media screen and (min-width: 700px) {
-.site {
-      grid-template-columns: 20vw auto;
-      grid-template-areas: "header header" "sidebar main" "footer footer";
+  .site {
+    grid-template-columns: 20vw auto;
+    grid-template-areas: "header header" "sidebar main" "footer footer";
+  }
 }
-
-}
-
-/* @import "no-sidebar"; */
-/*# sourceMappingURL=style.css.map */
+/*@import "no-sidebar";*//*# sourceMappingURL=style.css.map */
