s11-c1 ajout menu lateral

--- a/sass/composante/_nav_sidebar.scss
+++ b/sass/composante/_nav_sidebar.scss
@@ -19,6 +19,7 @@
 .menu__sidebar__ul .menu-item a //represent le a
 {
     padding: .5rem;
+    line-height: 1.5rem;
 
 }
 .menu__sidebar__ul .menu-item a :hover
