--- a/sass/composante/_nav_sidebar.scss
+++ b/sass/composante/_nav_sidebar.scss
@@ -1,3 +1,18 @@
+#burger {
+    display : block;
+    position : absolute;
+    top:50px;
+    left : 0;
+    z-index : 100;
+    transform: rotate(0deg);
+    transition: transform .5s;
+    @media screen and (min-width : 700px){
+        display : none;
+    }    
+
+}
+
+
 .menu__sidebar
 {
     position :absolute;
