s10-c2 ajout #chk-burger dans le fichier sass _nav_sidebar

--- a/sass/composante/_nav_sidebar.scss
+++ b/sass/composante/_nav_sidebar.scss
@@ -30,6 +30,18 @@
         transform: translateX(0vw);
     }
 }
+
+#chk-burger {
+    display : none;
+}
+
+#chk-burger:checked ~ .menu__sidebar {
+    transform : translateX(0);
+}
+#chk-burger:checked ~ #burger {
+    transform : rotate(90deg);
+}
+
 .menu__sidebar__ul
 {
     //background-color: rgb(34, 194, 64);
