--- a/style.css
+++ b/style.css
@@ -649,6 +649,29 @@ textarea {
 /**
 * block menu de la page d'accueil
 */
+.menu-accueil-container {
+  margin-top: 50px;
+}
+
+.menu-accueil-container .menu {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.menu-accueil-container .menu .menu-item {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #aaa;
+  width: 30%;
+  padding: 1.5rem;
+}
+
+.menu-accueil-container .menu .menu-item a {
+  text-decoration: none;
+}
+
 .blocs__horizontaux {
   display: flex;
   justify-content: space-between;
