--- a/sass/composante/_nav_sidebar.scss
+++ b/sass/composante/_nav_sidebar.scss
@@ -21,7 +21,7 @@
     z-index : 99;
     top : 0;
     left : 0;
-    background-color:  #fff;
+    background-color: none;
     transform: translateX(-100vw);
     transition : transform .5s;
     @media screen and (min-width : 700px){
