--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /*!
 Theme Name: 31w_Auri-TP1 
 Author: Auristela Echeverria
-Author URI: http://github.com/AuriEcheand/31W
+Author URI: https://github.com/AuriEcheand/theme-31w
 Description: Thème de base pour le cours de 31w
 Version: 1.0.0
 Tested up to: 5.4
