--- a/sass/composante/_nav_accueil.scss
+++ b/sass/composante/_nav_accueil.scss
@@ -24,3 +24,29 @@
     text-decoration: none;
 }
 
+/*menu atelier======================================>*/
+
+.menu-atelier-container{
+    margin-top: 50px;
+}
+
+.menu-atelier-container .menu{
+    display : flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.menu-atelier-container .menu .menu-item {
+    list-style-type: none;
+    margin : 0;
+    padding : 0;
+    border : 1px solid #aaa;
+    width: 30%;
+    padding : 1.5rem;
+}
+
+.menu-atelier-container .menu .menu-item a {
+    text-decoration: none;
+}
+
+
