ef-AEA ajout classe atelierpour background-color menu atelier

--- a/sass/composante/_nav_accueil.scss
+++ b/sass/composante/_nav_accueil.scss
@@ -49,4 +49,17 @@
     text-decoration: none;
 }
 
+.atelier_cms{
+    background-color: blue;
+}
+.atelier_css{
+    background-color: brown;
+}
+.atelier_serveur{
+    background-color: green;
+}
+
+.atelier_animation{
+    background-color: blueviolet;
+}
 
